refactor(seeder): isolate institution seeding in InstitutionSeeder refactor(seeder): isolate program seeding in ProgramSeeder refactor(seeder): refactor trace seeding refactor(entities): set entities constructor as private and introduce public static of method to instance entities instead. According to the Static Factory Method Pattern refactor(faker-entities): use Entities in FakeEntity instead of domain refactor(seeder): split program progress and skill seeder